--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          301 
+          花费大量时间注册GitHub,遇到诸多困难，一次又一次重新创建博客，过程异常艰辛，但是最终完成博客，努力得到回报，有成就感 
         </div>
           <a href="/posts/suibian/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
